KAS-3594 Replace Auk::Button & ButtonLink instances + general styling improvements (part 2)

--- a/app/components/agenda/side-nav.hbs
+++ b/app/components/agenda/side-nav.hbs
@@ -22,7 +22,11 @@
             @hideText={{true}}
             {{on "click" (if @isOpen @onCollapse @onOpen)}}
           >
-            {{t "toggle"}}
+            {{#if @isOpen}}
+              {{t "hide"}}
+            {{else}}
+              {{t "show"}}
+            {{/if}}
           </AuButton>
         </Group.Item>
       </Toolbar.Group>
