--- a/app/components/auk/accordion-panel.hbs
+++ b/app/components/auk/accordion-panel.hbs
@@ -8,6 +8,7 @@
         Header=(
           component 'auk/accordion-panel/header'
           accordionPanelId=this.accordionPanelId
+          isActive=this.isActive
           onToggleClick=this.toggleAccordionPanel
         )
         Body=(
