--- a/app/templates/styleguide/upload.hbs
+++ b/app/templates/styleguide/upload.hbs
@@ -5,5 +5,5 @@
         @title="Default"
         @code="&lt;Auk::FileUploader/&gt;"
 >
-  <Auk::FileUploader />
+  <Auk::FileUploader @reusable={{true}} />
 </StyleguideSample>
