--- a/app/components/documents/document-preview/document-preview-sidebar.hbs
+++ b/app/components/documents/document-preview/document-preview-sidebar.hbs
@@ -6,7 +6,7 @@
     {{if @isOpen "auk-scroll-wrapper"}}"
   @isCollapsed={{not @isOpen}}
 >
-  <Auk::Navbar>
+  <Auk::Navbar @noPadding={{not @isOpen}}>
     <Auk::Toolbar as |toolbar|>
       {{#if @isOpen}}
         <toolbar.Group @position="left" as |group|>
@@ -39,24 +39,28 @@
         </toolbar.Group>
         <Auk::Toolbar::Group @position="right">
           <Auk::Toolbar::Item>
-            <Auk::Button
-              @skin="borderless"
+            <AuButton
+              @skin="naked"
               @icon="chevron-right"
-              @layout="icon-only"
+              @hideText={{true}}
               {{on "click" @onCollapse}}
-            />
+            >
+              {{t "hide"}}
+            </AuButton>
           </Auk::Toolbar::Item>
         </Auk::Toolbar::Group>
       {{else}}
         <Auk::Toolbar::Group @position="center">
           <Auk::Toolbar::Item class="auk-o-flex auk-o-flex--horizontal-center">
-            <Auk::Button
+            <AuButton
               data-test-document-preview-sidebar-open
-              @skin="borderless"
+              @skin="naked"
               @icon="chevron-left"
-              @layout="icon-only"
+              @hideText={{true}}
               {{on "click" @onOpen}}
-            />
+            >
+              {{t "show"}}
+            </AuButton>
           </Auk::Toolbar::Item>
         </Auk::Toolbar::Group>
       {{/if}}
