--- a/app/components/documents/linked-documents.hbs
+++ b/app/components/documents/linked-documents.hbs
@@ -13,14 +13,14 @@
   {{/unless}}
   {{#if (user-may "manage-documents")}}
     <div class="auk-u-mb-4">
-      <Auk::Button
-        @skin="tertiary"
+      <AuButton
+        data-test-linked-documents-add
+        @skin="naked"
         @icon="plus"
         {{on "click" this.openLinkedPieceModal}}
-        data-test-linked-documents-add
       >
         {{t "document-link-old"}}
-      </Auk::Button>
+      </AuButton>
     </div>
   {{/if}}
 </div>
