--- a/app/components/ember-kaleidos-webuniversum/vl-uploaded-document.hbs
+++ b/app/components/ember-kaleidos-webuniversum/vl-uploaded-document.hbs
@@ -12,45 +12,46 @@
         {{this.name}}
       </h6>
       {{#if this.view}}
-        <Auk::Button
-          @skin="borderless"
-          @layout="icon-only"
+        <AuButton
+          @skin="naked"
           @icon="book"
+          @hideText={{true}}
           {{action "view"}}
         >
           {{t "show-piece"}}
-        </Auk::Button>
+        </AuButton>
       {{/if}}
       {{#if this.download}}
-        <Auk::Button
-          @skin="borderless"
-          @layout="icon-only"
+        <AuButton
+          @skin="naked"
           @icon="download"
+          @hideText={{true}}
           {{action "download"}}
         >
           {{t "download"}}
-        </Auk::Button>
+        </AuButton>
       {{else if this.downloadLink}}
-        <Auk::Button
-          @skin="borderless"
-          @layout="icon-only"
-          @icon="download"
-          @href={{this.downloadLink}}
+        <AuButton
           download={{if this.downloadName this.downloadName this.name}}
+          @skin="naked"
+          @icon="download"
+          @hideText={{true}}
+          @href={{this.downloadLink}}
         >
           {{t "download"}}
-        </Auk::Button>
+        </AuButton>
       {{/if}}
       {{#if this.delete}}
-        <Auk::Button
-          @skin="danger-borderless"
-          @layout="icon-only"
-          @icon="trash"
-          {{action "delete"}}
+        <AuButton
           data-test-vl-uploaded-document-delete-piece
+          @skin="naked"
+          @alert={{true}}
+          @icon="trash"
+          @hideText={{true}}
+          {{action "delete"}}
         >
           {{t "delete"}}
-        </Auk::Button>
+        </AuButton>
       {{/if}}
     </div>
     <div class="auk-u-text-muted">
