--- a/app/styles/custom-application/styleguide/_br-styleguide-sample.scss
+++ b/app/styles/custom-application/styleguide/_br-styleguide-sample.scss
@@ -45,8 +45,7 @@
   Adjust font weight in buttons
   ========================================================================== */
 
-.auk-button-link.br-styleguide-sample-copy-code-btn,
-.auk-button-link.br-styleguide-sample-show-code-btn {
+.br-styleguide-sample-copy-code-btn,
+.br-styleguide-sample-show-code-btn {
   font-weight: 400;
-  // font-size: 1.5rem;
 }
