KAS-3584 change file to replace with word file replacement

--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -48,7 +48,7 @@
                     href={{this.piece.file.primarySource.namedDownloadLink}}
                     download
                   >
-                    {{t (if (eq this.piece.file.primarySouce.extension "docx") "word-document" "source-file-lowercase")}}
+                    {{t (if (eq this.piece.file.primarySource.extension "docx") "word-document" "source-file-lowercase")}}
                   </AuLinkExternal>
                 </p>
               {{/if}}
