KAS-3639 Add correct overflow-wrap property to text display element

--- a/app/components/newsletter-item/view-panel.hbs
+++ b/app/components/newsletter-item/view-panel.hbs
@@ -40,6 +40,7 @@
         {{this.proposalText}}
       </p>
       <SanitizeHtml
+        class="auk-u-overflow-wrap-anywhere"
         @raw={{true}}
         @value={{@newsletterItem.richtext}}
       />
