KAS-3614 Add dynamic size property to panel header + add property to component & styleguide docs

--- a/app/components/newsletter-item/view-panel.hbs
+++ b/app/components/newsletter-item/view-panel.hbs
@@ -1,5 +1,5 @@
 <Auk::Panel>
-  <Auk::Panel::Header>
+  <Auk::Panel::Header @size="auto">
     <Auk::Toolbar as |Toolbar|>
       <Toolbar.Group @position="left" as |Group|>
         <Group.Item>
