--- a/app/templates/styleguide/panel.hbs
+++ b/app/templates/styleguide/panel.hbs
@@ -207,7 +207,7 @@
     <tr>
       <td><code>@size</code></td>
       <td>string</td>
-      <td><code>regular</code>, <code>large</code> (regular is the default size)</td>
+      <td><code>regular</code>, <code>large</code> or <code>auto</code> (regular is the default size)</td>
       <td>Determines the sizes of the badge</td>
     </tr>
     <tr>
