Revert label to source-document
The source document isn't always a Word document.

--- a/app/components/documents/document-details-panel.hbs
+++ b/app/components/documents/document-details-panel.hbs
@@ -47,7 +47,7 @@
         />
       </Auk::KeyValue>
       <Auk::KeyValue
-        @key={{t "word-document"}}
+        @key={{t "source-document"}}
       >
         <div class="au-u-flex au-u-flex--between">
           {{#if @piece.file.primarySource}}
