--- a/app/templates/newsletters/search.hbs
+++ b/app/templates/newsletters/search.hbs
@@ -22,6 +22,8 @@
         <Auk::Datepicker
           @date={{this.dateFromBuffer}}
           @onChange={{set this "dateFromBuffer"}}
+          @enableClear={{this.dateFromBuffer}}
+          @onClear={{set this "dateFromBuffer" undefined}}
         />
       </div>
       <div class="auk-form-group auk-u-position-relative au-u-margin-bottom-none au-u-1-6" data-test-route-search-date-to>
@@ -29,6 +31,8 @@
         <Auk::Datepicker
           @date={{this.dateToBuffer}}
           @onChange={{set this "dateToBuffer"}}
+          @enableClear={{this.dateToBuffer}}
+          @onClear={{set this "dateToBuffer" undefined}}
         />
       </div>
       <div class="auk-form-group au-u-margin-bottom-none au-u-1-6">
