--- a/app/components/m-header.hbs
+++ b/app/components/m-header.hbs
@@ -4,52 +4,54 @@
       <Auk::Toolbar::Item>
         <Auk::Brand @logotype="Kaleidos" />
       </Auk::Toolbar::Item>
-      <Auk::Toolbar::Item>
-        <Auk::Tabs>
-          <Auk::Tab
-            @route="search.index"
-            @current-when="search"
-            data-test-m-header-search
-          >
-            <Auk::Icon @name="search" />
-            {{capitalize (t "search")}}
-          </Auk::Tab>
-          <Auk::Tab
-            @route="agendas"
-            @current-when="agendas agenda print-overviews.decisions print-overviews.press-agenda"
-            data-test-m-header-agendas
-          >
-            {{t "agendas"}}
-          </Auk::Tab>
-          <Auk::Tab @route="cases" data-test-m-header-cases>
-            {{t "cases"}}
-          </Auk::Tab>
-          {{#if (user-may "manage-newsletter-infos")}}
+      {{#if this.session.isAuthenticated}}
+        <Auk::Toolbar::Item>
+          <Auk::Tabs>
             <Auk::Tab
-              @route="newsletters"
-              @current-when="newsletters newsletter print-overviews.newsletter"
-              data-test-m-header-newsletters
+              @route="search.index"
+              @current-when="search"
+              data-test-m-header-search
             >
-              {{t "newsletter"}}
+              <Auk::Icon @name="search" />
+              {{capitalize (t "search")}}
             </Auk::Tab>
-          {{/if}}
-          {{#if (user-may "manage-publication-flows")}}
-            <Auk::Tab @route="publications" data-test-m-header-publications>
-              {{t "publications"}}
+            <Auk::Tab
+              @route="agendas"
+              @current-when="agendas agenda print-overviews.decisions print-overviews.press-agenda"
+              data-test-m-header-agendas
+            >
+              {{t "agendas"}}
             </Auk::Tab>
-          {{/if}}
-          {{#if this.isShownSignatureFolder}}
-            <Auk::Tab @route="signatures" data-test-m-header-signatures>
-              {{t "signature-folder"}}
+            <Auk::Tab @route="cases" data-test-m-header-cases>
+              {{t "cases"}}
             </Auk::Tab>
-          {{/if}}
-          {{#if (user-may "manage-settings")}}
-            <Auk::Tab @route="settings.overview" data-test-m-header-settings>
-              {{t "settings"}}
-            </Auk::Tab>
-          {{/if}}
-        </Auk::Tabs>
-      </Auk::Toolbar::Item>
+            {{#if (user-may "manage-newsletter-infos")}}
+              <Auk::Tab
+                @route="newsletters"
+                @current-when="newsletters newsletter print-overviews.newsletter"
+                data-test-m-header-newsletters
+              >
+                {{t "newsletter"}}
+              </Auk::Tab>
+            {{/if}}
+            {{#if (user-may "manage-publication-flows")}}
+              <Auk::Tab @route="publications" data-test-m-header-publications>
+                {{t "publications"}}
+              </Auk::Tab>
+            {{/if}}
+            {{#if this.isShownSignatureFolder}}
+              <Auk::Tab @route="signatures" data-test-m-header-signatures>
+                {{t "signature-folder"}}
+              </Auk::Tab>
+            {{/if}}
+            {{#if (user-may "manage-settings")}}
+              <Auk::Tab @route="settings.overview" data-test-m-header-settings>
+                {{t "settings"}}
+              </Auk::Tab>
+            {{/if}}
+          </Auk::Tabs>
+        </Auk::Toolbar::Item>
+      {{/if}}
     </Auk::Toolbar::Group>
     <Auk::Toolbar::Group @position="right">
       {{#if this.environmentName}}
@@ -89,7 +91,7 @@
             @padded="padded"
             @label={{this.currentSession.user.firstName}}
             data-test-m-header-user-actions
-          as |Menu|>
+            as |Menu|>
             <Menu.Item @textOnly={{true}}>
               <Auk::Avatar
                 @icon="user"
