KAS-1652 refactor more occurences of retracted

--- a/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-view.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-view.hbs
@@ -124,7 +124,7 @@
               </AuPill>
             </div>
           {{/if}}
-          {{#if @agendaitem.retracted}}
+          {{#if this.agendaitemDecisionResult.isPostponed}}
             <div class="auk-u-mt-2">
               <AuPill @size="small">
                 {{t "postponed-item"}}
