--- a/app/components/agenda/agenda-overview/agenda-overview-item.hbs
+++ b/app/components/agenda/agenda-overview/agenda-overview-item.hbs
@@ -1,5 +1,5 @@
 <div
-  class={{if @agendaitem.retracted "auk-u-opacity--1/3"}}
+  class={{if this.isAgendaitemPostponedOrRetracted "auk-u-opacity--1/3"}}
   {{in-viewport
     onEnter=(perform this.lazyLoadSideData)
     onExit=this.cancelLazyLoad
